feat(subscription): update subscription management mecanism
